--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -40,7 +40,9 @@ span,
 h1,h2,h3,h4,h5,h6 {
   font: 12px/25px sansMedium,tahoma;
 }
-
+hr{
+  margin-bottom: 1px !important;
+}
 a {
   &:hover,&:focus {
     text-decoration: none;
