--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -172,7 +172,7 @@ a {
   transform: translate3d(100%, 0, 0);
 }
 .about-T {
-  margin-top: 100px;
+  margin-top: 80px;
   font-size: 26px;
 }
 .text-about {
@@ -369,7 +369,7 @@ a {
   margin-top: 80px;
 }
 .image{
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 .costomer {
   margin-right: 10px;
@@ -559,7 +559,7 @@ a {
     }
   }
   li {
-    padding-top: 6px;
+    padding-top: 9px;
     list-style: none;
     text-align: center;
     display: inline-block;
@@ -581,49 +581,197 @@ a {
 }
 
 .grid {
+  position: relative;
+  clear: both;
   margin: 0 auto;
+  padding: 1em 0 4em;
   list-style: none;
   text-align: center;
 }
-
-.grid li {
-  display: inline-block;
-  margin: 0;
-  text-align: left;
-  position: relative;
+.portfolio .active{
+  background-color: $color-light-blue !important;
+  color: $color-white;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.0);
 }
-
+/* Common style */
 .grid figure {
-  margin: 0;
+  display: inline-block;
   position: relative;
+  overflow: hidden;
+  margin: 10px 1%;
+  min-width: 320px;
+  max-width: 380px;
+  max-height: 360px;
+  width: 48%;
+  height: auto;
+  background: #3085a3;
+  text-align: center;
+  cursor: pointer;
 }
-
 .grid figure img {
-  max-width: 100%;
-  display: block;
   position: relative;
+  display: block;
+  min-height: 100%;
+  max-width: 100%;
+  opacity: 0.8;
+}
+.grid figure figcaption {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.grid figure figcaption::before, .grid figure figcaption::after {
+  pointer-events: none;
+}
+//.grid figure figcaption, .grid figure figcaption > .more {
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  width: 100%;
+//  height: 100%;
+//}
+/* Anchor will cover the whole item by default */
+/* For some effects it will show as a button */
+//.grid figure figcaption > .more {
+//  z-index: 1000;
+//  text-indent: 200%;
+//  white-space: nowrap;
+//  font-size: 0;
+//  opacity: 0;
+//}
+//.grid figure .more {
+//  word-spacing: -0.15em;
+//  font-weight: 300;
+//}
+//.grid figure .more span {
+//  font-weight: 800;
+//}
+//.grid figure .more, .grid figure p {
+//  margin: 0;
+//}
+//.grid figure .more {
+//  letter-spacing: 1px;
+//  font-size: 68.5%;
+//}
+/*---------------*/
+/***** Ming *****/
+/*---------------*/
+
+figure.effect-ming {
+  background: #030c17;
+}
+figure.effect-ming img {
+  opacity: 0.9;
+  -webkit-transition: opacity 0.35s;
+  transition: opacity 0.35s;
+}
+figure.effect-ming figcaption::before {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  border: 2px solid #fff;
+  box-shadow: 0 0 0 30px rgba(255,255,255,0.2);
+  content: '';
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale3d(1.4, 1.4, 1);
+  transform: scale3d(1.4, 1.4, 1);
+}
+//figure.effect-ming .more {
+//  margin: 10% 0 10px 0;
+//  -webkit-transition: -webkit-transform 0.35s;
+//  transition: transform 0.35s;
+//}
+figure.effect-ming .more {
+  padding:5px;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+}
+.left-ef{
+  color:#FFFFFF;
+  font-size:11px;
+  padding-right:5px;
+}
+//figure.effect-ming .more{
+//  width:200px;
+//  height:200px;
+//  color:#FFFFFF;
+//  text-decoration:none;
+//  font-size:18px;
+//}
+figure.effect-ming a:hover{
+  color:#ddd;
+
 }
 
-.grid figcaption {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0px;
-  background: #2c3f52;
-  color: $color-light-blue;
+figure.effect-ming:hover .more {
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
 }
-.grid figcaption h3 {
-  margin: 0;
-  padding: 0;
-  color: #fff;
+figure.effect-ming:hover figcaption::before, figure.effect-ming:hover .more {
+  opacity: 1;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
 }
-.grid figcaption i{
-  font-size: 25px;
-  margin-top: 30px;
+figure.effect-ming:hover figcaption {
+  background-color: rgba(58,52,42,0);
 }
-.grid figcaption span:before {
-  content: 'by ';
+figure.effect-ming:hover img {
+  opacity: 0.4;
 }
+
+//.grid {
+//  margin: 0 auto;
+//  list-style: none;
+//  text-align: center;
+//}
+//
+//.grid li {
+//  display: inline-block;
+//  margin: 0;
+//  text-align: left;
+//  position: relative;
+//}
+//
+//.grid figure {
+//  margin: 0;
+//  position: relative;
+//}
+//
+//.grid figure img {
+//  max-width: 100%;
+//  display: block;
+//  position: relative;
+//}
+//
+//.grid figcaption {
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  padding: 0px;
+//  background: #2c3f52;
+//  color: $color-light-blue;
+//}
+//.grid figcaption h3 {
+//  margin: 0;
+//  padding: 0;
+//  color: #fff;
+//}
+//.grid figcaption i{
+//  font-size: 25px;
+//  margin-top: 30px;
+//}
+//.grid figcaption span:before {
+//  content: 'by ';
+//}
 .pdf{
   position: relative;
   left: 20px;
@@ -644,15 +792,15 @@ a {
 
 
 /* Caption Style 3 */
-.cs-style-3 figure {
-  overflow: hidden;
-}
-
-.cs-style-3 figure img {
-  -webkit-transition: -webkit-transform 0.2s;
-  -moz-transition: -moz-transform 0.2s;
-  transition: transform 0.2s;
-}
+//.cs-style-3 figure {
+//  overflow: hidden;
+//}
+//
+//.cs-style-3 figure img {
+//  -webkit-transition: -webkit-transform 0.2s;
+//  -moz-transition: -moz-transform 0.2s;
+//  transition: transform 0.2s;
+//}
 .btn-top {
   position: fixed;
   bottom: 20px;
@@ -677,32 +825,32 @@ a {
 //  transform: translateY(-50px);
 //}
 
-.cs-style-3 figcaption {
-  height: 0px;
-  width: 100%;
-  top: auto;
-  bottom: 0;
-  opacity: 0;
-  -webkit-transform: translateY(100%);
-  -moz-transform: translateY(100%);
-  -ms-transform: translateY(100%);
-  transform: translateY(100%);
-  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
-  -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
-  transition: transform 0.4s, opacity 0.1s 0.3s;
-}
-
-.no-touch .cs-style-3 figure:hover figcaption,
-.cs-style-3 figure.cs-hover figcaption {
-  opacity: 1;
-  -webkit-transform: translateY(0px);
-  -moz-transform: translateY(0px);
-  -ms-transform: translateY(0px);
-  transform: translateY(0px);
-  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
-  -moz-transition: -moz-transform 0.4s, opacity 0.1s;
-  transition: transform 0.4s, opacity 0.1s;
-}
+//.cs-style-3 figcaption {
+//  height: 0px;
+//  width: 100%;
+//  top: auto;
+//  bottom: 0;
+//  opacity: 0;
+//  -webkit-transform: translateY(100%);
+//  -moz-transform: translateY(100%);
+//  -ms-transform: translateY(100%);
+//  transform: translateY(100%);
+//  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+//  -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+//  transition: transform 0.4s, opacity 0.1s 0.3s;
+//}
+//
+//.no-touch .cs-style-3 figure:hover figcaption,
+//.cs-style-3 figure.cs-hover figcaption {
+//  opacity: 1;
+//  -webkit-transform: translateY(0px);
+//  -moz-transform: translateY(0px);
+//  -ms-transform: translateY(0px);
+//  transform: translateY(0px);
+//  -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+//  -moz-transition: -moz-transform 0.4s, opacity 0.1s;
+//  transition: transform 0.4s, opacity 0.1s;
+//}
 
 .more{
   position: absolute;
@@ -818,6 +966,14 @@ a {
   i{
     padding-top: 14px;
   }
+  &:hover{
+    background-color: $color-dark-gray;
+    border: 1px solid $color-white;
+    transition: all 400ms;
+    i{
+      color: $color-white;
+    }
+  }
 }
 
 .text-Contact{
@@ -844,6 +1000,7 @@ a {
   float: left !important;
   color: $color-white;
   background-color: #222;
+  clear: both;
   &:hover{
     color: $color-white;
   }
@@ -938,7 +1095,7 @@ a {
 }
 .nav-fix{
   position:fixed;
-  top:0px;
+  top:0;
   z-index:1000;
   width: 100%;
   border-bottom: 2px solid  $color-light-blue;
