--- a/app/scss/responsive.scss
+++ b/app/scss/responsive.scss
@@ -115,6 +115,22 @@
       font-size: 20px;
     }
   }
+  .more{
+    position: absolute;
+    bottom: 90px;
+    right: 110px;
+  }
+  .btnpdf{
+    width: 150px;
+    height: 35px;
+    color: #222;
+    background-color: #0dbff2;
+    position: relative;
+    left: -90px;
+  }
+  .imagew{
+    height: 25px;
+  }
   #comment{
     width: 279px;
     width: 100%;
