--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -2,14 +2,14 @@
   font-family:'sans';
   src:url('app/fonts/bell.ttf') format('ttf');
   //url(app/fonts/IRANSans/IRANSansWeb_Light.eot) format('eot'),
-  //url(app/fonts/IRANSans/IRANSansWeb_Light.eot?#iefix) format('embedded-opentype'),
+  //url(app/fonts/IRANSans/IRANSansW
+@font-face {
+  font-family:'sansMedium';eb_Light.eot?#iefix) format('embedded-opentype'),
   //url('app/fonts/IRANSans/IRANSansWeb_Light.ttf') format('truetype');
-  font-weight:normal;
+font-weight:normal;
   font-style:normal;
   font-variant:normal;
 }
-@font-face {
-  font-family:'sansMedium';
   src:url('app/fonts/bell.ttf') format('ttf');
   font-weight:bold;
 }
