--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -1,19 +1,27 @@
 @font-face {
-  font-family: 'sans';
-  src: url('../fonts/bell.ttf') format('ttf');
-  //url(app/fonts/IRANSans/IRANSansWeb_Light.eot) format('eot'),
-  //url(app/fonts/IRANSans/IRANSansW
-}
-@font-face {
-  font-family:'bell';
+  font-family:'sans';
+  src:url('app/fonts/IRANSans/IRANSansWeb_Light.woff') format('woff'),
+  url(app/fonts/IRANSans/IRANSansWeb_Light.eot) format('eot'),
+  url(app/fonts/IRANSans/IRANSansWeb_Light.eot?#iefix) format('embedded-opentype'),
+  url('app/fonts/IRANSans/IRANSansWeb_Light.ttf') format('truetype');
   font-weight:normal;
   font-style:normal;
   font-variant:normal;
-  src:url('../fonts/bell.ttf') format('ttf');
+}
+@font-face {
+  font-family:'sansMedium';
+  src:url('app/fonts/IRANSansMedium/IRANSansWeb_Medium.woff') format('woff'),
+  url(app/fonts/IRANSansMedium/IRANSansWeb_Medium.eot) format('eot'),
+  url(app/fonts/IRANSansMedium/IRANSansWeb_Medium.eot?#iefix) format('embedded-opentype'),
+  url('app/fonts/IRANSansMedium/IRANSansWeb_Medium.ttf') format('truetype');
+  font-weight:bold;
 }
 @font-face {
   font-family:'sansBold';
-  src:url('../fonts/bell.ttf') format('ttf');
+  src:url('app/fonts/IRANSansBold/IRANSansWeb_Bold.woff') format('woff'),
+  url(app/fonts/IRANSansBold/IRANSansWeb_Bold.eot) format('eot'),
+  url(app/fonts/IRANSansBold/IRANSansWeb_Bold.eot?#iefix) format('embedded-opentype'),
+  url('app/fonts/IRANSansBold/IRANSansWeb_Bold.ttf') format('truetype');
   font-weight:bold;
 }
 //
@@ -30,7 +38,7 @@ label,
 p,
 span,
 h1,h2,h3,h4,h5,h6 {
-  font: 12px/25px bell,tahoma;
+  font: 12px/25px sansMedium,tahoma;
 }
 hr{
   margin-bottom: 1px !important;
