--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -364,7 +364,7 @@ a {
 .backgrund {
   min-height: 800px;
   height: auto;
-  background-image: url(app/images/home-slide-2-2050x1337.jpg);
+  background-image: url(app/images/start.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
