--- a/app/scss/responsive.scss
+++ b/app/scss/responsive.scss
@@ -205,6 +205,68 @@
       padding-top: 9px;
     }
   }
+  .slider {
+    width: 100px;
+    &.owl-theme .owl-nav [class*=owl-] {
+      background: rgba(4, 4, 4, .2);
+    }
+    &.owl-theme .owl-nav [class*=owl-] {
+      color: $color-white;
+      font-size: 14px;
+      margin: 5px;
+      padding: 4px 7px;
+      background: #D6D6D6;
+      display: inline-block;
+      cursor: pointer;
+      border-radius: 3px;
+      position: relative;
+      top: -385px;
+    }
+    &.owl-theme .owl-dots, .owl-theme .owl-nav {
+      text-align: center;
+      -webkit-tap-highlight-color: transparent;
+      margin-top: -200px;
+      position: relative;
+    }
+    &.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+      background: #0dbff2;
+    }
+    &.owl-theme .owl-nav [class*=owl-] {
+      background: rgba(0, 0, 0, .1);
+      border: 1px solid $color-light-blue;
+      width: 60px;
+      height: 60px;
+      &:hover {
+        background: $color-light-blue !important;
+        border: 1px solid $color-light-blue;
+        transition: all 0.3s;
+        i{
+          color: #fff !important;
+          transition: all 0.3s;
+        }
+      }
+    }
+    .owl-next {
+      position: relative;
+      left: 600px !important;
+      display: none !important;
+    }
+    .next {
+      color: #00baf5 !important;
+      padding-top: 17px;
+      display: none !important;
+    }
+    .prev {
+      color: #00baf5 !important;
+      padding-top: 17px;
+      display: none;
+    }
+    .owl-prev {
+      position: relative;
+      display: none;
+      left: -600px !important;
+    }
+  }
   .navbar-inverse2 {
     background-color: #fff;
     height: 60px;
